--- a/simple.html
+++ b/simple.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<!--
+Copyright 2015 Git Training
+-->
 <head>
 	<title>SIMPLE New Branch</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
