mb before rebase conflicts

--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--
-Copyright 2015 Git Training
+Copyright 2017 Git Training For Developers
 -->
 <head>
 	<title>Great website</title>
