mb conflicting changes brewing

--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--
-Copyright 2017 Git Training For Developers
+Copyright 2017 Git Training For Developers Help Conflicting changes
 -->
 <head>
 	<title>Great website</title>
@@ -17,7 +17,8 @@ Copyright 2017 Git Training For Developers
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			What's going to happen now
+			What's gtroubleoing to happen now
+			Now What --- this is not good!
 		</p>
 	</main>
 	<footer class="container">
