more rebase conflicts

--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <!--
-Copyright 2017 Git Training For Developers Help Conflicting changes
+Copyright 2017 Git Training For Developers 
+Help Conflicting changes
+Rebase Info
 -->
 <head>
 	<title>An Ok Website ---- Not worlds greatest website</title>
@@ -18,6 +20,10 @@ Copyright 2017 Git Training For Developers Help Conflicting changes
 	<!-- Content Goes Here -->
 		<p>
 			What's gtroubleoing to happen now
+			Now What --- this is not good!What's gtroubleoing to happen now
+			Now What --- this is not good!What's gtroubleoing to happen now is not good!What's gtroubleoing to happen now
+			Now What --- this is not good!What's gtroubleoing to happen now
+			Now What --- this is not good!What's gtroubleoing to happen now
 			Now What --- this is not good!
 		</p>
 	</main>
