worlds greatest website --- title change

--- a/simple.html
+++ b/simple.html
@@ -5,7 +5,7 @@ Help Conflicting changes
 Rebase Info
 -->
 <head>
-	<title>An Ok Website ---- Not worlds greatest website</title>
+	<title>World greatest website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
