NOT THE worlds greatest website --- title change

--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 Copyright 2017 Git Training For Developers Help Conflicting changes
 -->
 <head>
-	<title>Great website</title>
+	<title>An Ok Website ---- Not worlds greatest website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
