--- a/simple.html
+++ b/simple.html
@@ -28,7 +28,7 @@ Rebase Info
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Brian Hannigan 2017</p>
+		<p>&copy; Brian Hannigan 2017 Worlds greatest</p>
 	</footer>
 </body>
 </html>
