done with simple updates after stash apply

--- a/simple.html
+++ b/simple.html
@@ -21,9 +21,7 @@ Rebase Info
 		<p>
 			What's gtroubleoing to happen now
 			Now What --- this is not good!What's gtroubleoing to happen now
-			Now What --- this is not good!What's gtroubleoing to happen now is not good!What's gtroubleoing to happen now
-			Now What --- this is not good!What's gtroubleoing to happen now
-			Now What --- this is not good!What's gtroubleoing to happen now
+			Now What --- this isow
 			Now What --- this is not good!
 		</p>
 	</main>
