--- a/simple.html
+++ b/simple.html
@@ -5,7 +5,7 @@ Help Conflicting changes
 Rebase Info
 -->
 <head>
-	<title>World greatest website</title>
+	<title>World greatest websi1111te  tagging</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -21,9 +21,7 @@ Rebase Info
 		<p>
 			What's gtroubleoing to happen now
 			Now What --- this is not good!What's gtroubleoing to happen now
-			Now What --- this is not good!What's gtroubleoing to happen now is not good!What's gtroubleoing to happen now
-			Now What --- this is not good!What's gtroubleoing to happen now
-			Now What --- this is not good!What's gtroubleoing to happen now
+			Now What --- this isow
 			Now What --- this is not good!
 		</p>
 	</main>
